@@ -3,8 +3,8 @@
 #' \tabular{ll}{
 #' Package: \tab afex\cr
 #' Type: \tab Package\cr
-#' Version: \tab 0.9-100\cr
-#' Date: \tab 2014-04-07\cr
+#' Version: \tab 0.9-101\cr
+#' Date: \tab 2014-04-08\cr
 #' Depends: \tab R (>= 2.15.0), car, lme4 (>= 1.0.5), pbkrtest (>= 0.3-6), reshape2\cr
 #' Encoding: \tab UTF-8\cr
 #' License: \tab GPL (>=3)\cr
